fix: add back to top z-index value

--- a/assets/scss/_common/back-to-top.scss
+++ b/assets/scss/_common/back-to-top.scss
@@ -4,4 +4,5 @@
     position: fixed;
     bottom: 1em;
     right: 1em;
+    z-index: 1;
 }
